@@ -9,6 +9,8 @@
     :license: BSD, see LICENSE for details
 """
 
+from __future__ import absolute_import
+
 import json
 import copy
 import collections
